--- a/src/pages/Edit/index.css
+++ b/src/pages/Edit/index.css
@@ -7,7 +7,7 @@ main {
 
 .card-form {
     padding: 30px 20px;
-    border: 3px solid white;
+    border: 3px solid #29EBAA;
     width: 500px;
     height: 600px;
     border-radius: 5px;
@@ -20,18 +20,11 @@ main {
     margin-bottom: 40px;
     font-family: monospace;
     font-size: 2rem;
+    color: #29EBAA;
 }
 
 .fields {
     margin-bottom: 20px;
-}
-
-label {
-    display: block;
-    margin-bottom: 7px;
-    font-size: 1.2rem;
-    color: #D2DAF5;
-    font-family: Poppins;
 }
 
 input, textarea {
@@ -40,6 +33,8 @@ input, textarea {
     margin: 20px auto;
     width: 80%;
     height: 10%;
+    border-color: #29EBAA;
+    outline-color: #29EBAA;
 }
 
 input {
@@ -58,7 +53,9 @@ textarea {
     margin: 50px auto;
     width: 200px;
     height: 50px;
-    background-color: white;
+    background-color: transparent;
+    color: #29EBAA;
+    border-color: #29EBAA;
     border-radius: 5px;
     font-size: 1.3rem;
     font-family: monospace;
@@ -68,7 +65,7 @@ textarea {
 
 .btn-form button:hover {
     background-color: #29EBAA;
-    color: black;
+    color: white;
 }
 
 .error-message {
