--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -32,7 +32,7 @@ main .cards .card {
     margin: 0 auto;
     padding: 30px 40px;
     width: 600px;
-    border: 3px solid white;
+    border: 3px solid #3DECB1;
     border-radius: 7px;
     margin-top: 40px;
 }
@@ -47,10 +47,11 @@ main .cards .card {
     font-family: Noto Sans;
     font-weight: 700;
     font-size: 1.7rem;
+    color: #3DECB1;
 }
 
 .line {
-    background-color: white;
+    background-color:#3DECB1;
     height: 2px;
 }
 
@@ -60,6 +61,7 @@ p {
     max-width: 500px;
     font-family: Noto Sans;
     font-weight: 500;
+    color: #3DECB1;
 }
 
 .btns {
@@ -69,8 +71,10 @@ p {
 }
 
 .btns button {
-    color: rgba(0, 0, 0, 1);
+    background-color: transparent;
+    color: #3DECB1;
     font-size: 1.3rem;
+    border-color: #3DECB1;
     border-radius: 5px;
     font-family: monospace;
     font-weight: 700;
@@ -80,14 +84,17 @@ p {
 
 .btn-view button:hover {
     background-color: #3DECB1;
+    color: white;
 }
 
 .btn-edit button:hover {
     background-color: #80D8FF;
+    color: white;
 }
 
 .btn-delete button:hover {
     background-color: rgb(241, 45, 45);
+    color: white;
 }
 
 .loading {
